--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <div class="">
-
+                <div class="Name">
+                    <h1 style="text-align:center;"> Muhammad Aamir Noor</h1>
                 </div>
                 <div class="stopwatch">
                     <div>
